// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`update-object tool targetType: comment should update a comment content 1`] = `
"# Comment Updated

**Comment ID:** comment-id-1
**Thread ID:** thread-id-1
**Channel ID:** channel-id-1
**Last Edited:** 2025-02-03T12:34:56.000Z
**URL:** https://comms.todoist.com/11111/ch/channel-id-1/t/thread-id-1/c/comment-id-1

## Content

Updated comment content"
`;

exports[`update-object tool targetType: message should update a conversation message content 1`] = `
"# Message Updated

**Message ID:** msg-id-1
**Conversation ID:** conv-id-1
**Workspace ID:** 11111
**Last Edited:** 2025-02-03T12:34:56.000Z
**URL:** https://comms.todoist.com/11111/msg/conv-id-1/m/msg-id-1

## Content

Updated message content"
`;

exports[`update-object tool targetType: thread should update a thread title and content 1`] = `
"# Thread Updated

**Title:** Updated Title
**Thread ID:** thread-id-1
**Channel ID:** channel-id-1
**Last Edited:** 2025-02-03T12:34:56.000Z
**URL:** https://comms.todoist.com/11111/ch/channel-id-1/t/thread-id-1/

## Content

Updated content"
`;

exports[`update-object tool targetType: thread should update only the thread content 1`] = `
"# Thread Updated

**Title:** Test Thread
**Thread ID:** thread-id-1
**Channel ID:** channel-id-1
**URL:** https://comms.todoist.com/11111/ch/channel-id-1/t/thread-id-1/

## Content

New content only"
`;

exports[`update-object tool targetType: thread should update only the thread title 1`] = `
"# Thread Updated

**Title:** New Title Only
**Thread ID:** thread-id-1
**Channel ID:** channel-id-1
**URL:** https://comms.todoist.com/11111/ch/channel-id-1/t/thread-id-1/

## Content

Test thread content"
`;
